# www-project-agent-memory-guard

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
action/: action.yml
docs/: contributing.md  index.md
docs/api/: endpoints.md  index.md
docs/architecture/: design.md  threat-model.md
docs/cli/: check.md  index.md  scan.md  serve.md
docs/detectors/: cross-task.md  excessive-autonomy.md  index.md  injection.md  leakage.md  ml-detection.md  privilege-escalation.md  self-reinforcement.md  tool-abuse.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integrations/: crewai.md  github-actions.md  index.md  langchain.md  llamaindex.md
integrations/autogen-agent-memory-guard/: pyproject.toml
integrations/autogen-agent-memory-guard/autogen_agent_memory_guard/: __init__.py  exceptions.py  guarded_agent.py  guarded_chat.py  hook.py
src/agent_memory_guard/: __init__.py  authority.py  cli.py  events.py  guard.py  lineage.py  metrics.py  middleware.py  rag.py  scan.py  server.py  tools.py
src/agent_memory_guard/detectors/: __init__.py  excessive_autonomy.py  long_horizon.py  ml_injection.py  privilege_escalation.py  self_reinforcement.py  tool_abuse.py
src/agent_memory_guard/policies/: policy.py
src/agent_memory_guard/scanner/: __init__.py
tests/: test_authority_extension.py  test_lineage_extension.py  test_new_detectors.py  test_policy_tiered.py  test_receipt_extension.py  test_self_reinforcement.py
tests/benchmarks/: test_delayed_activation.py
