[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-guard"
version = "0.2.2"
description = "Runtime defense layer that protects AI agent memory from poisoning attacks (OWASP ASI06)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "OWASP Agent Memory Guard" }]
keywords = ["owasp", "ai-security", "llm", "agents", "memory-poisoning", "asi06"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
test = ["pytest>=7.0", "coverage>=7.0"]
dev = ["ruff>=0.4", "mypy>=1.0", "coverage>=7.0", "pytest>=7.0"]

[project.urls]
Homepage = "https://owasp.org/www-project-agent-memory-guard/"
Source = "https://github.com/OWASP/www-project-agent-memory-guard"
Documentation = "https://owasp.org/www-project-agent-memory-guard/"
Issues = "https://github.com/OWASP/www-project-agent-memory-guard/issues"
Changelog = "https://github.com/OWASP/www-project-agent-memory-guard/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N818"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agent_memory_guard"]
omit = [
    "*/integrations/crewai.py",
    "*/integrations/llamaindex.py",
    "*/integrations/langchain.py",
    "*/metrics.py",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
