[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-agent-memory-guard"
version = "0.1.0"
description = "AutoGen integration for OWASP Agent Memory Guard – runtime defense against AI agent memory poisoning attacks (OWASP ASI06)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "OWASP Agent Memory Guard Contributors"},
]
keywords = ["autogen", "owasp", "ai-security", "agent-memory", "memory-poisoning", "prompt-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "autogen-agentchat>=0.4.0",
    "agent-memory-guard>=0.2.2",
]

[project.urls]
Homepage = "https://owasp.org/www-project-agent-memory-guard/"
Repository = "https://github.com/OWASP/www-project-agent-memory-guard"
Documentation = "https://github.com/OWASP/www-project-agent-memory-guard/tree/main/integrations/autogen-agent-memory-guard"

[tool.hatch.build.targets.wheel]
packages = ["autogen_agent_memory_guard"]
